--- a/14-typescript/tsconfig.json
+++ b/14-typescript/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-        "outDir": "dist/js",
+        "outDir": "app/dist/js",
         "target": "ES2022",
         "noEmitOnError": true,
         "noImplicitAny": true,
         "removeComments": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "experimentalDecorators": true
     },
-    "include": ["app/**/*"]
+    "include": ["app/src/**/*"]
 }
