--- a/14-typescript/tsconfig.json
+++ b/14-typescript/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
         "outDir": "app/dist/js",
-        "target": "ES2022",
+        "target": "ES6",
         "noEmitOnError": true,
         "noImplicitAny": true,
         "removeComments": true,
         "strictNullChecks": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
     },
     "include": ["app/src/**/*"]
 }
